<resources>
    <string name="app_name">Movie Search 100</string>
    <string name="action_settings">Settings</string>
    <string name="label_search_text">Enter search text here</string>
    <string name="label_submit">Search</string>
    <string name="label_search_text_empty">Search text is empty</string>
    <string name="label_release_date">Released: </string>
    <string name="label_not_available">(Not available)</string>
    <string name="label_movie_list_reset">New search list on display</string>
    <string name="label_movie_not_found">No movie found</string>
    <string name="label_movie_list_appended">More results added to list</string>
    <string name="label_movie_list_bottom_reached">List bottom reached</string>

    <string name="label_title">Title</string>
    <string name="label_overview">Overview</string>
    <string name="label_release_date_no_colon">Release Date</string>
    <string name="label_status">Status</string>
    <string name="label_video">Video</string>
    <string name="label_adult">Adult</string>

    <string name="label_yes">Yes</string>
    <string name="label_no">No</string>
    <string name="label_movie_detail">Movie Detail</string>
    <string name="label_done">Done</string>
    <string name="label_version">Version</string>

</resources>
