<?xml version="1.0" encoding="utf-8"?>
<!-- card_layout.xml -->
<android.support.v7.widget.CardView
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardCornerRadius="4dp"
    android:layout_margin="5dp"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_blue_dark"
            android:text="@string/label_title"
            android:maxLines="3"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:textColor="@android:color/white"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:paddingStart="5dp"
            android:paddingEnd="0dp"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_title"
            >
            <ImageView
                android:id="@+id/poster_image"
                android:layout_width="70dp"
                android:layout_height="100dp"
                android:layout_marginTop="2dp"
                android:layout_marginLeft="3dp"
                android:layout_weight="20"
                android:maxHeight="100dp"
                android:src="@drawable/poster_not_found"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                />
            <TextView
                android:id="@+id/tv_release_date_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_release_date"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@id/poster_image"
                android:layout_marginTop="5dp"
                android:layout_marginStart="5dp"
                />
            <TextView
                android:id="@+id/tv_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_release_date_no_colon"
                android:gravity="center_vertical"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="false"
                android:layout_toEndOf="@id/tv_release_date_label"
                android:layout_marginTop="5dp"
                android:layout_marginStart="5dp"
                />
            <TextView
                android:id="@+id/tv_overview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_overview"
                android:maxLines="3"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_toRightOf="@id/poster_image"
                android:layout_below="@id/tv_date"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="10dp"
                />
        </RelativeLayout>
    </RelativeLayout>
</android.support.v7.widget.CardView>