<?xml version="1.0" encoding="utf-8"?>
<!-- activity_movie_detail.xml -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="3dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="5dp"
        android:text="@string/label_movie_detail"
        android:textStyle="bold"
        android:textAppearance="?android:textAppearanceMedium"
        />
    <View
        android:id="@+id/divider_before_cardlist2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        >
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_layout_light"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="0dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                >
                <TextView
                    android:id="@+id/tv_title_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="0dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="5dp"
                    android:text="@string/label_title"
                    android:textStyle="italic"
                    android:textAppearance="?android:textAppearanceSmall"
                    />
                <TextView
                    android:id="@+id/tv_title_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@id/tv_title_label"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="5dp"
                    android:text="@string/label_title"
                    android:textStyle="normal"
                    android:textAppearance="?android:textAppearanceMedium"
                    />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_layout_light"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="0dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                >
                <TextView
                    android:id="@+id/tv_release_date_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="0dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="5dp"
                    android:text="@string/label_release_date_no_colon"
                    android:textStyle="italic"
                    android:textAppearance="?android:textAppearanceSmall"
                    />
                <TextView
                    android:id="@+id/tv_release_date_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@id/tv_release_date_label"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="5dp"
                    android:text="@string/label_release_date_no_colon"
                    android:textStyle="normal"
                    android:textAppearance="?android:textAppearanceMedium"
                    />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_layout_light"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="0dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                >
                <TextView
                    android:id="@+id/tv_status_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="0dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="5dp"
                    android:text="@string/label_status"
                    android:textStyle="italic"
                    android:textAppearance="?android:textAppearanceSmall"
                    />
                <TextView
                    android:id="@+id/tv_status_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@id/tv_status_label"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="5dp"
                    android:text="@string/label_status"
                    android:textStyle="normal"
                    android:textAppearance="?android:textAppearanceMedium"
                    />
            </RelativeLayout>
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/border_layout_light"
                 android:layout_marginTop="2dp"
                 android:layout_marginBottom="0dp"
                 android:layout_marginLeft="2dp"
                 android:layout_marginRight="2dp"
                 >
                 <TextView
                     android:id="@+id/tv_adult_label"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentTop="true"
                     android:layout_marginTop="5dp"
                     android:layout_marginBottom="0dp"
                     android:layout_marginLeft="10dp"
                     android:layout_marginRight="5dp"
                     android:text="@string/label_adult"
                     android:textStyle="italic"
                     android:textAppearance="?android:textAppearanceSmall"
                     />
                 <TextView
                     android:id="@+id/tv_adult_field"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_alignParentLeft="true"
                     android:layout_below="@id/tv_adult_label"
                     android:layout_marginTop="2dp"
                     android:layout_marginBottom="5dp"
                     android:layout_marginLeft="10dp"
                     android:layout_marginRight="5dp"
                     android:text="@string/label_adult"
                     android:textStyle="normal"
                     android:textAppearance="?android:textAppearanceMedium"
                     />
             </RelativeLayout>
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/border_layout_light"
                 android:layout_marginTop="2dp"
                 android:layout_marginBottom="0dp"
                 android:layout_marginLeft="2dp"
                 android:layout_marginRight="2dp"
                 >
                 <TextView
                     android:id="@+id/tv_video_label"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentTop="true"
                     android:layout_marginTop="5dp"
                     android:layout_marginBottom="0dp"
                     android:layout_marginLeft="10dp"
                     android:layout_marginRight="5dp"
                     android:text="@string/label_video"
                     android:textStyle="italic"
                     android:textAppearance="?android:textAppearanceSmall"
                     />
                 <TextView
                     android:id="@+id/tv_video_field"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_alignParentLeft="true"
                     android:layout_below="@id/tv_video_label"
                     android:layout_marginTop="2dp"
                     android:layout_marginBottom="5dp"
                     android:layout_marginLeft="10dp"
                     android:layout_marginRight="5dp"
                     android:text="@string/label_video"
                     android:textStyle="normal"
                     android:textAppearance="?android:textAppearanceMedium"
                     />
             </RelativeLayout>
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/border_layout_light"
                 android:layout_marginTop="2dp"
                 android:layout_marginBottom="10dp"
                 android:layout_marginLeft="2dp"
                 android:layout_marginRight="2dp"
                 >
                 <TextView
                     android:id="@+id/tv_overview_label"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentTop="true"
                     android:layout_marginTop="5dp"
                     android:layout_marginBottom="0dp"
                     android:layout_marginLeft="10dp"
                     android:layout_marginRight="5dp"
                     android:text="@string/label_overview"
                     android:textStyle="italic"
                     android:textAppearance="?android:textAppearanceSmall"
                     />
                 <TextView
                     android:id="@+id/tv_overview_field"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_alignParentLeft="true"
                     android:layout_below="@id/tv_overview_label"
                     android:layout_marginTop="2dp"
                     android:layout_marginBottom="5dp"
                     android:layout_marginLeft="10dp"
                     android:layout_marginRight="5dp"
                     android:text="@string/label_overview"
                     android:textStyle="normal"
                     android:textAppearance="?android:textAppearanceMedium"
                     android:maxLines="10"
                     />
             </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>