<?xml version="1.0" encoding="utf-8"?>
<!-- content_movie_detail.xml -->
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.davidmlee.kata.moviesearch100.view.MovieDetailActivity"
    tools:showIn="@layout/activity_movie_detail"
    >
    <TextView
        android:id="@+id/screen_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="3dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="5dp"
        android:text="@string/label_movie_detail"
        android:textStyle="bold"
        android:textAppearance="?android:textAppearanceMedium"
        />
    <View
        android:id="@+id/divider_before_cardlist4"
        android:layout_width="368dp"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@id/screen_title"
        app:layout_constraintLeft_toLeftOf="parent"
        android:background="@android:color/white"
        />
    <View
        android:id="@+id/divider_before_cardlist2"
        android:layout_width="368dp"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@id/divider_before_cardlist4"
        app:layout_constraintLeft_toLeftOf="parent"
        android:background="@android:color/darker_gray"
        />
    <ScrollView
        android:id="@+id/detail_scrollview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/divider_before_cardlist2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        >
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5sp"
            android:layout_marginRight="5sp"
            android:background="@android:color/background_light"
            >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_layout_light"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="0dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                >
                <TextView
                    android:id="@+id/tv_title_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="0dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="5dp"
                    android:text="@string/label_title"
                    android:textStyle="italic"
                    android:textAppearance="?android:textAppearanceSmall"
                    />
                <TextView
                    android:id="@+id/tv_title_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@id/tv_title_label"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="5dp"
                    android:text="@string/label_title"
                    android:textStyle="normal"
                    android:textAppearance="?android:textAppearanceMedium"
                    />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_layout_light"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="0dp"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                >
                <TextView
                    android:id="@+id/tv_release_date_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="0dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="5dp"
                    android:text="@string/label_release_date_no_colon"
                    android:textStyle="italic"
                    android:textAppearance="?android:textAppearanceSmall"
                    />
                <TextView
                    android:id="@+id/tv_release_date_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@id/tv_release_date_label"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="5dp"
                    android:text="@string/label_release_date_no_colon"
                    android:textStyle="normal"
                    android:textAppearance="?android:textAppearanceMedium"
                    />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_layout_light"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="0dp"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                >
                <TextView
                    android:id="@+id/tv_status_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="0dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="5dp"
                    android:text="@string/label_status"
                    android:textStyle="italic"
                    android:textAppearance="?android:textAppearanceSmall"
                    />
                <TextView
                    android:id="@+id/tv_status_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@id/tv_status_label"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="5dp"
                    android:text="@string/label_status"
                    android:textStyle="normal"
                    android:textAppearance="?android:textAppearanceMedium"
                    />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_layout_light"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="0dp"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                >
                <TextView
                    android:id="@+id/tv_adult_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="0dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="5dp"
                    android:text="@string/label_adult"
                    android:textStyle="italic"
                    android:textAppearance="?android:textAppearanceSmall"
                    />
                <TextView
                    android:id="@+id/tv_adult_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@id/tv_adult_label"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="5dp"
                    android:text="@string/label_adult"
                    android:textStyle="normal"
                    android:textAppearance="?android:textAppearanceMedium"
                    />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_layout_light"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="0dp"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                >
                <TextView
                    android:id="@+id/tv_video_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="0dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="5dp"
                    android:text="@string/label_video"
                    android:textStyle="italic"
                    android:textAppearance="?android:textAppearanceSmall"
                    />
                <TextView
                    android:id="@+id/tv_video_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@id/tv_video_label"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="5dp"
                    android:text="@string/label_video"
                    android:textStyle="normal"
                    android:textAppearance="?android:textAppearanceMedium"
                    />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_layout_light"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                >
                <TextView
                    android:id="@+id/tv_overview_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="0dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="5dp"
                    android:text="@string/label_overview"
                    android:textStyle="italic"
                    android:textAppearance="?android:textAppearanceSmall"
                    />
                <TextView
                    android:id="@+id/tv_overview_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@id/tv_overview_label"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="5dp"
                    android:text="@string/label_overview"
                    android:textStyle="normal"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:maxLines="1000"
                    />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
